--- a/env_deploy/deployment.yml
+++ b/env_deploy/deployment.yml
@@ -24,6 +24,11 @@ spec:
       containers:
       - name: nginx
         image: nginx:1.14.2
+         env:
+          - name: SAMPLE_TESTE
+            value: "Hello"
+          - name: SAMPLE_TESTE
+            value: "Hello"
         ports:
         - containerPort: 80
         resources:
