--- a/env_deploy/deployment.yml
+++ b/env_deploy/deployment.yml
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:1.14.2
+        image: nginx:alpine
         env:
           - name: SAMPLE_TESTE
             value: "Hello"
