rename nginx deployment to nginx-deployment-vs

--- a/env-deploy/deployment.yml
+++ b/env-deploy/deployment.yml
@@ -7,7 +7,7 @@ metadata:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
+  name: nginx-deployment-vs
   namespace: nginx
   labels:
     app: nginx
