--- a/env-deploy/deployment.yml
+++ b/env-deploy/deployment.yml
@@ -7,7 +7,7 @@ metadata:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment-vs
+  name: nginx-deployment
   namespace: nginx
   labels:
     app: nginx
